<resources>
    <string name="app_name">EBB</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="prompt_password">prompt_password</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="donarRegistration">Donar Registration</string>
    <string name="needBlood">Need Blood</string>
    <string name="searchBylocation">Search By Location</string>
    <string name="account">Account</string>
    <string name="about_us">About Us</string>
    <string name="donarList">Donar List</string>

    <!--Registration Form for doanar-->
    <!--name is already exists-->
    <string name="address">Address</string>
    <string name="sex">Sex</string>
    <string name="ocuupation">Occupation</string>
    <string name="bloodGruoup">Blood Group</string>

    <string name="phone">phone</string>
    <!--email is already exists-->
    <string name="dateOfBirth">(date-month-year)</string>
    <string name="nationalIdNo">National Id No</string>
    <string name="age">Age</string>
    <string name="lastDonationDate">Last Donation Date</string>
    <string name="location">Location</string>
    <string name="emergencyBloodNeed">Emergency Blood Need</string>

    <!--for card view-->
    <string name="bloodGruoupc">Blood Group : </string>
    <string name="donarNamec">Name : </string>
    <string name="donarAddressc">Address : </string>
    <string name="donarSexc">Sex : </string>
    <string name="donarAgec">Age : </string>
    <string name="donarPhoneNoc">Phone : </string>
    <string name="donarEmailc">Email : </string>
    <string name="donarNationaNoc">National ID : </string>
    <string name="donarOccupationc">Occupation : </string>
    <string name="donarLocationc">Location : </string>
    <string name="name">Name</string>


</resources>
